--- a/build.gradle
+++ b/build.gradle
@@ -55,18 +55,21 @@ clean.finalizedBy 'spotlessApply'
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'com.auth0:java-jwt:3.9.0'
+    api 'com.auth0:java-jwt:3.10.0'
 
     // These dependencies are not exported to consumers
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    implementation 'org.springframework:spring-web:5.1.0.RELEASE'
-    implementation 'org.springframework:spring-context:5.1.0.RELEASE'
+    implementation 'org.springframework:spring-web:5.2.3.RELEASE'
+    implementation 'org.springframework:spring-context:5.2.3.RELEASE'
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
     implementation 'org.jasypt:jasypt:1.9.2'
 
     // Use JUnit test framework
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.mockito:mockito-core:2.+'
-    testImplementation 'org.springframework:spring-test:5.1.0.RELEASE'
+    testImplementation 'org.springframework:spring-test:5.2.3.RELEASE'
     testImplementation 'org.assertj:assertj-core:3.11.1'
 }
+
